# starlight

./: .gitignore  .prettierignore  .prettierrc  README.md  Starlight.sln  eslint.config.mjs  package-lock.json  package.json  tsconfig.json
.run/: Starlight.Backend_ http-prod.run.xml  Starlight.Backend_ http.run.xml  Starlight.Backend_ https-prod.run.xml  Starlight.Backend_ https.run.xml  Starlight.Emotiv.run.xml  start.run.xml
Starlight.Backend/: .gitignore  Program.cs  Starlight.Backend.csproj  Starlight.Tracks.db  appsettings.json
Starlight.BackgroundDaemon/: pyproject.toml  signal_reader.py  signal_server.py
Starlight.Emotiv/: .gitignore  Program.cs  Starlight.Emotiv.csproj
Starlight.Frontend/: .gitignore  Starlight.Frontend.esproj  package-lock.json  package.json
Submitted Files/: Rhythm Game Starlight Template.pptx
backend/: .env  .gitignore  Cargo.toml  Rocket.toml
backend/.cargo/: config.toml
backend/core/: Cargo.toml  Rocket.toml
backend/core/src/: config.rs  context.rs  main.rs
backend/core/src/api/: auth.rs  index.rs  mod.rs  user.rs
backend/core/src/api/guard/: auth_player.rs
backend/core/src/api/request/: auth_request.rs
backend/core/src/api/response/: mod.rs  player_response.rs
backend/core/src/controllers/: auth.rs  index.rs  mod.rs  user.rs
backend/core/src/controllers/guard/: auth_player.rs  mod.rs
backend/core/src/controllers/request/: auth_request.rs
backend/core/src/controllers/response/: player_response.rs
backend/core/src/middlewares/: cors.rs
backend/core/src/tests/: mod.rs  test_auth.rs  test_index_page.rs  test_user.rs
backend/core/src/utils/: exp.rs  mod.rs  password.rs
backend/prisma/: schema.prisma
backend/prisma-cli/: Cargo.toml
backend/prisma/migrations/20241220042325_init/: migration.sql
backend/prisma_lib/: Cargo.toml
backend/src/: main.rs
backend/src/controllers/: auth.rs  index.rs  mod.rs
backend/src/middlewares/: cors.rs
backend/src/tests/: mod.rs  test_index_page.rs  test_rootpage.rs
emotiv/: README.md  cortex.ts  cortex_client.ts  cortex_server.ts  emotiv_reader.ts  index.d.ts  mini_program.ts  package.json  simple_reader.ts  start-server.ts  utils.ts
frontend/: electron-builder.json  index.html  package-lock.json  package.json  tsconfig.app.json  vite.config.ts  webpack.config.js
server/: jest.config.ts  jwt.ts  package.json  secrets.ts  server.ts
(+295 files in other folders)
